# sellbook

./: .coveragerc  .gitignore  CLAUDE.md  FRONTEND_MIGRATION.md  README.md  UNIT_TESTS_SUMMARY.md  api_sales_data.csv  app.py  book_analysis_api.py  book_analysis_api_v2.py  book_sales.csv  books_data.csv  build-frontend.sh  database.py  docs_output.html  findbook.py  incremental_scraper.py  incremental_scraper_v2.py  manual_chrome_guide.md  migrate_data.py  migrate_to_database.py  nohup.out  pyproject.toml  pytest.ini  real_browser_scraper.py  requirements.txt  run.py  run_unit_tests.py  sales_analyzer.py  sales_analyzer_v2.py  shop_list.txt  test_blocked_window_switching.py  test_crawler_pool.py  test_crawler_service_v2.py  test_preferred_window.py  test_unblock_time_display.py  test_window_pool.py
.superdesign/design_iterations/: dashboard_1.html  theme_1.css
data/: sellbook.db
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: dashboard.tsx  main.tsx
src/: __init__.py  database.py  exceptions.py  main.py
src/crawlers/: __init__.py  active_listing_crawler.py  duozhuayu_price_crawler.py  isbn_crawler.py
src/models/: __init__.py  book.py  database.py  models.py  repositories.py  shop.py
src/repositories/: __init__.py  book_repository.py  shop_repository.py
src/routes/: api_routes.py  book_routes.py  shop_routes.py
src/services/: __init__.py  analysis_service.py  autonomous_session_manager.py  book_service.py  crawler_service.py  crawler_service_v2.py  rate_limiter.py  rate_limiter_aiolimiter.py  shop_service.py  simple_task_queue.py  window_pool.py
src/static/: book_admin.html  common-components.js  crawler_admin.html  index.html  isbn_search.html  sales_data_admin.html  sales_manager.html  shop_admin.html  tailwind.min.css  window_pool_admin.html
static/: index.html
templates/: index.html
tests/: TESTING_GUIDE.md  TEST_CHECKLIST.md  conftest.py
tests/e2e/: test_book_management_flow.py  test_shop_management_flow.py
tests/fixtures/: __init__.py  (+1 more)
(+35 files in other folders)
