[project]
name = "sellbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "aiosqlite>=0.20.0",
    "fastapi>=0.116.1",
    "playwright>=1.54.0",
    "pydantic>=2.9.2",
    "uvicorn>=0.35.0",
]
